2001-08-01  Darin Adler  <darin@bentspoon.com>

	* .cvsignore: Add this.

2001-08-02  Michael Meeks  <michael@ximian.com>

	* bonobo-storage-vfs.c (concat_dir_and_file): impl.
	(vfs_open_stream, vfs_list_contents, vfs_open_storage),
	(vfs_erase): use it.

	* bonobo-storage-fs.c (concat_dir_and_file): impl.
	(fs_get_info, fs_open_stream, fs_open_storage),
	(fs_rename, fs_list_contents, fs_erase): use it.

2001-07-30  Michael Meeks  <michael@ximian.com>

	* GNOME_VFS_Moniker_std.oaf.in.in: in library gnome_vfs not
	vfs_gnome, doh.

2001-07-29  Seth Nickell  <snickell@stanford.edu>

	* bonobo-storage-fs.c:
	* bonobo-storage-vfs.c:
	* bonobo-stream-fs.c:
	* bonobo-stream-vfs.c:

	Make it actually compile ;-) Still had includes to parts
	of libgnome.
	
2001-07-29  Michael Meeks  <michael@ximian.com>

	* Makefile.am: re-write.

2001-07-27  Michael Meeks  <michael@ximian.com>

	* Move into gnome-vfs.

	Reviewed by: Seth <snickell@stanford.edu>

2001-07-27  Michael Meeks  <michael@ximian.com>
	
	* gnome-moniker-std.c: fix the factory name so it is what it
	says it is.

	* GNOME_Moniker_std.oaf.in.in: fix the shlib factory path.

	* Makefile.am (clean-local): actualy install the monikers.
	use xml-i18n-tools.

2001-07-11  Martin Baulig  <baulig@suse.de>

	* bonobo-storage-fs.c, bonobo-moniker-extender-file: Use
	gnome_vfs_mime_type_from_name(), not gnome_mime_type_from_file().

2001-07-10  Michael Meeks  <michael@ximian.com>

	* bonobo-moniker-vfs.c: add.

	* bonobo-stream-vfs.c: port to GObject / BonoboObject.

	* bonobo-storage-vfs.c: ditto.

	* GNOME_Moniker_std.oaf.in.in: register the vfs moniker.

2001-07-10  Michael Meeks  <michael@ximian.com>

	* bonobo-storage-fs.c (fs_open_storage),
	(fs_open_stream): CORBA_Object_duplicate the return
	values.

2001-07-10  Michael Meeks  <michael@ximian.com>

	* bonobo-moniker-file.c (bonobo_moniker_file_resolve):
	upd. to use it.

	* bonobo-storage-fs.c: port to BonoboObject / GObject.
