@@ -1,3 +1,8 @@
+2001-08-03  Darin Adler  <darin@bentspoon.com>
+
+	* Makefile.am: Use CFLAGS from gnome-vfs instead of hard-coding
+	things like -Wno-unused which are gcc-specific.
+
 2001-08-01  Darin Adler  <darin@bentspoon.com>
 
 	* .cvsignore: Add this.
